--- a/config.json
+++ b/config.json
@@ -37,6 +37,7 @@
             }
         ]
     },
+    "enable-every-page-hooks-on-system-pages": true,
     "no-auth-pages": [],
     "framework-version": 9,
     "compatibility": {
