--- a/config.json
+++ b/config.json
@@ -20,8 +20,63 @@
     "project-settings": [],
     "system-settings": [
         {
-            "key": "email-body-template",
-            "name": "<strong>Email Template</strong><br>Default template for email alerts to users whose rights are not in compliance",
+            "key": "user-email-descriptive",
+            "name": "<div class='bg-primary text-light p-2'><strong>User Alert Email Settings</strong><p>These settings control the default text present in email alerts to users whose rights are not in compliance in a project. The text can be modified in the project prior to sending the alerts. These settings act only as handy templates.</p><div>",
+            "type": "descriptive"
+        },
+        {
+            "key": "user-email-subject-template",
+            "name": "<strong>User Alert Email Default Subject</strong>",
+            "type": "text"
+        },
+        {
+            "key": "user-email-body-template",
+            "name": "<strong>User Alert Email Default Body</strong>",
+            "type": "rich-text"
+        },
+        {
+            "key": "user-reminder-email-descriptive",
+            "name": "<div style='border: 1px solid #ff000020; background-color: #ff000014;' class='p-2'><strong>User Reminder Alert Settings</strong></div><div class='bg-primary text-light p-2'><p>These settings control the default text present in reminder email alerts to users whose rights are not in compliance in a project. The alerts will not send if the rights are brought into compliance prior to the alert's send time.</p><div>",
+            "type": "descriptive"
+        },
+        {
+            "key": "user-reminder-email-subject-template",
+            "name": "<span style='border: 1px solid #ff000020; background-color: #ff000014;' class='p-2'><strong>User Reminder Alert Email Default Subject</strong></span>",
+            "type": "text"
+        },
+        {
+            "key": "user-reminder-email-body-template",
+            "name": "<span style='border: 1px solid #ff000020; background-color: #ff000014;' class='p-2'><strong>User Reminder Email Default Body</strong></span>",
+            "type": "rich-text"
+        },
+        {
+            "key": "user-rights-holders-email-descriptive",
+            "name": "<div class='bg-warning text-body p-2'><strong>User Rights Holder Alert Email Settings</strong><p>These settings control the default text present in email alerts to users with user rights permissions in projects with users whose rights are not in compliance. The text can be modified in the project prior to sending the alerts. These settings act only as handy templates.</p></div>",
+            "type": "descriptive"
+        },
+        {
+            "key": "user-rights-holders-email-subject-template",
+            "name": "<strong>User Rights Holders Alert Email Default Subject</strong>",
+            "type": "text"
+        },
+        {
+            "key": "user-rights-holders-email-body-template",
+            "name": "<strong>User Rights Holders Alert Email Default Body</strong>",
+            "type": "rich-text"
+        },
+        {
+            "key": "user-rights-holders-reminder-email-descriptive",
+            "name": "<div style='border: 1px solid #ff000020; background-color: #ff000014;' class='p-2'><strong>User Rights Holder Reminder Alert Email Settings</strong></div><div class='bg-warning text-body p-2'><p>These settings control the default text present in reminder email alerts to users with user rights permissions in projects with users whose rights are not in compliance</p></div>",
+            "type": "descriptive"
+        },
+        {
+            "key": "user-rights-holders-reminder-email-subject-template",
+            "name": "<span style='border: 1px solid #ff000020; background-color: #ff000014;' class='p-2'><strong>User Rights Holders Reminder Alert Email Default Subject</strong>",
+            "type": "text"
+        },
+        {
+            "key": "user-rights-holders-reminder-email-body-template",
+            "name": "<span style='border: 1px solid #ff000020; background-color: #ff000014;' class='p-2'><strong>User Rights Holders Reminder Alert Email Default Body</strong>",
             "type": "rich-text"
         }
     ],
