--- a/config.json
+++ b/config.json
@@ -140,8 +140,11 @@
         "expireUsers",
         "getAlert",
         "getAlerts",
+        "getProjectReport",
         "getProjectUsers",
         "getSags",
+        "getUserAndProjectReport",
+        "getUserReport",
         "getUsers",
         "importCsvSags",
         "importCsvUsers",
