--- a/config.json
+++ b/config.json
@@ -1,19 +1,19 @@
 {
     "name": "Security Access Groups",
     "namespace": "YaleREDCap\\SecurityAccessGroups",
-    "description": "Placeholder",
+    "description": "Create and manage Security Access Groups, which define at the system level the set of allowable user rights a REDCap user is able to be granted in a project",
     "authors": [
         {
             "name": "Andrew Poppe",
             "email": "andrew.poppe@yale.edu",
-            "institution": "Yale Center for Clinical Investigation"
+            "institution": "Yale Biomedical Informatics and Data Science"
         }
     ],
     "project-settings": [],
     "system-settings": [
         {
             "key": "user-email-descriptive",
-            "name": "<div class='bg-primary text-light p-2'><strong>User Alert Email Settings</strong><p>These settings control the default text present in email alerts to users whose rights are not in compliance in a project. The text can be modified in the project prior to sending the alerts. These settings act only as handy templates.</p><div>",
+            "name": "<div class='bg-primary text-light p-2'><strong>User Alert Email Settings</strong><p>These settings control the default text present in email alerts to users whose rights are not in compliance in a project. The text can be modified in the project prior to sending the alerts. These settings act only as handy templates.</p></div><br><div class='p-2' style='background-color: #b8daff;'><table class='table table-sm table-borderless'><thead><tr><th colspan=2><span><strong>You can use the following placeholders to insert information into your email subject and body:</strong></span></th></tr></thead><tbody><tr><td><code>[sag-user]</code></td><td>The user's username</td></tr><tr><td><code>[sag-user-fullname]</code></td><td>The user's full name</td></tr><tr><td><code>[sag-user-email]</code></td><td>The user's email address</td></tr><tr><td><code>[sag-user-sag]</code></td><td>The user's current security access group</td></tr><tr><td><code>[sag-rights]</code></td><td>A formatted list of the rights that do not conform with the user's security access group.</td></tr><tr><td><code>[sag-project-title]</code></td><td>The title of the project</td></tr></tbody></table><strong>You can also use any REDCap Smart Variable</strong></div>",
             "type": "descriptive"
         },
         {
@@ -43,7 +43,7 @@
         },
         {
             "key": "user-rights-holders-email-descriptive",
-            "name": "<div class='bg-warning text-body p-2'><strong>User Rights Holder Alert Email Settings</strong><p>These settings control the default text present in email alerts to users with user rights permissions in projects with users whose rights are not in compliance. The text can be modified in the project prior to sending the alerts. These settings act only as handy templates.</p></div>",
+            "name": "<div class='bg-warning text-body p-2'><strong>User Rights Holder Alert Email Settings</strong><p>These settings control the default text present in email alerts to users with user rights permissions in projects with users whose rights are not in compliance. The text can be modified in the project prior to sending the alerts. These settings act only as handy templates.</p></div><br><div class='p-2' style='background-color: #ffeeba;'><table class='table table-sm table-borderless'><thead><tr><th colspan=2><span><strong>You can use the following placeholders to insert information into your email subject and body:</strong></span></th></tr></thead><tbody><tr><td><code>[sag-users]</code></td><td>A formatted list of usernames</td></tr><tr><td><code>[sag-user-fullnames]</code></td><td>A formatted list of users' full names</td></tr><tr><td><code>[sag-user-emails]</code></td><td>A formatted list of users' emails</td></tr><tr><td><code>[sag-user-sags]</code></td><td>A formatted list of users' current security access groups</td></tr><tr><td><code>[sag-users-table]</code></td><td>A formatted table of usernames, full names, email addresses, and SAGs</td></tr><tr><td><code>[sag-users-table-full]</code></td><td>A formatted table of usernames, full names, email addresses, SAGs, and non-compliant rights</td></tr><tr><td><code>[sag-project-title]</code></td><td>The title of the project</td></tr></tbody></table><strong>You can also use any REDCap Smart Variable</strong></div>",
             "type": "descriptive"
         },
         {
@@ -73,7 +73,7 @@
         },
         {
             "key": "user-expiration-email-descriptive",
-            "name": "<div class='bg-danger text-light p-2'><strong>User Expiration Alert Email Settings</strong><p>These settings control the default text present in email alerts to users and user rights holders upon user expiration. The text can be modified in the project prior to sending the alerts. These settings act only as handy templates.</p></div>",
+            "name": "<div class='bg-danger text-light p-2'><strong>User Expiration Alert Email Settings</strong><p>These settings control the default text present in email alerts to users and user rights holders upon user expiration. The text can be modified in the project prior to sending the alerts. These settings act only as handy templates.</p></div><br><div class='p-2' style='background-color: #f5c6cbaa;'><table class='table table-sm table-borderless'><thead><tr><th colspan=2><span><strong>In addition to the placeholders described above, you can use the following placeholder in an expiration alert email subject and body:</strong></span></th></tr></thead><tbody><tr><td><code>[sag-expiration-date]</code></td><td>The date the user(s) will be expired from the proejct</td></tr></tbody></table><strong>You can also use any REDCap Smart Variable</strong></div>",
             "type": "descriptive"
         },
         {
