--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,2 @@
-fonts/* linguist-vendored
-lib/* linguist-vendored
-lib/**/* linguist-vendored
-fonts/**/* linguist-vendored
+fonts/** linguist-vendored
+lib/** linguist-vendored
