--- a/config.json
+++ b/config.json
@@ -175,6 +175,7 @@
     "no-auth-pages": [],
     "framework-version": 12,
     "documentation": "README.html",
+    "tt_documentation": "doc_path",
     "compatibility": {
         "php-version-min": "7.4.00",
         "php-version-max": "8.1.99",
