--- a/.github/workflows/translate_readme.yml
+++ b/.github/workflows/translate_readme.yml
@@ -66,22 +66,24 @@ jobs:
         
         
         # Construct the API request JSON
-        API_REQUEST='{
-        "sourceLanguageCode": "'$SOURCE_LANG'",
-        "targetLanguageCodes": '$TARGET_LANGUAGES',
-        "inputConfigs": [{
-            "gcsSource": {
-            "inputUri": "'$INPUT_FILE'"
-            },
-            "mimeType": "text/html" 
-        }],
-        "outputConfig": {
-            "gcsDestination": {
-            "outputUriPrefix": "gs://sag_readme_translated/"
+        read -r -d API_REQUEST <<- EOM
+        {
+            "sourceLanguageCode": "$SOURCE_LANG",
+            "targetLanguageCodes": $TARGET_LANGUAGES,
+            "inputConfigs": [{
+                "gcsSource": {
+                    "inputUri": "$INPUT_FILE"
+                },
+                "mimeType": "text/html" 
+            }],
+            "outputConfig": {
+                "gcsDestination": {
+                    "outputUriPrefix": "gs://sag_readme_translated/"
+                }
             }
         }
-        }'
-        
+        EOM
+
         # Make the API request
         API_RESPONSE=$(curl -s -X POST \
         -H "Authorization: Bearer $GCP_ACCESS_TOKEN" \
@@ -92,6 +94,8 @@ jobs:
         
         # Extract the operation ID from the response
         OPERATION_ID=$(echo "$API_RESPONSE" | jq -r '.name')
+
+        echo $OPERATION_ID
         
         echo "OPERATION_ID=$OPERATION_ID" >> $GITHUB_OUTPUT
       id: translate
