--- a/.github/workflows/translate_readme.yml
+++ b/.github/workflows/translate_readme.yml
@@ -67,9 +67,9 @@ jobs:
 
     - name: Download translated files
       run: |
-        mkdir translated_files
+        mkdir docs/readme/translated_files
         #gsutil -m cp gs://sag_readme_translated/* translated_files/
-        gcloud storage cp gs://sag_readme_translated/* translated_files/
+        gcloud storage cp gs://sag_readme_translated/* docs/readme/translated_files/
 
     - name: Cleanup bucket
       if: always()
